@@ -32,9 +32,9 @@
     </modules>
 
     <properties>
-        <java.version>23</java.version>
-        <maven.compiler.source>23</maven.compiler.source>
-        <maven.compiler.target>23</maven.compiler.target>
+        <java.version>25</java.version>
+        <maven.compiler.source>25</maven.compiler.source>
+        <maven.compiler.target>25</maven.compiler.target>
         <lombok.version>1.18.42</lombok.version>
     </properties>
 
@@ -82,6 +82,7 @@
                 <version>3.11.0</version>
                 <configuration>
                     <compilerArgs>
+                        <arg>--enable-preview</arg>
                     </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
